# api/internal/admin/dto/admin.go
@@ -1,0 +1,5 @@
+package dto
+
+type HealthCheckResponse struct {
+	DbConnected bool `json:"dbConnected"`
+}
